tests/errors/only_keywords_or_brace_after_condition_if.odl
main :: () -> void {
    if x := 0; x == 0 do 10;
};